--- a/microblog/app/templates/base.html
+++ b/microblog/app/templates/base.html
@@ -7,6 +7,7 @@
     {% endif %}
 </head>
 <body>
+{% import 'macros.html' as macros %}
 {% include "header.html" %}
 {% with messages = get_flashed_messages() %}
     {% if messages %}
