register link and route

--- a/microblog/app/templates/login.html
+++ b/microblog/app/templates/login.html
@@ -11,4 +11,6 @@
         {{ macros.render_field(form.remember_me)}}
         <input type="submit" value="Sign In">
     </form>
+    <th>
+    <p>or <a href="/register">Register!</a></p>
 {% endblock %}
