register form is working (it just creates users, no validation)

--- a/microblog/app/templates/register.html
+++ b/microblog/app/templates/register.html
@@ -8,7 +8,7 @@
         {{ form.hidden_tag() }}
         {{ macros.render_field(form.username, "username_field")}}
         {{ macros.render_field(form.password, "password_field automation_password_field")}}
-        {{ macros.render_field(form.repeat_password, "repeated_password_field automation_repeated_password_field")}}
+        {{ macros.render_field(form.repeated_password, "repeated_password_field automation_repeated_password_field")}}
         {{ macros.render_field(form.email, "email_field automation_email_field")}}
         <input type="submit" value="Register">
     </form>
