validation for password with the EqualTo validator from WTForm instead of manually doing it.

--- a/microblog/app/templates/macros.html
+++ b/microblog/app/templates/macros.html
@@ -6,7 +6,7 @@
         {{ field(class_=form_class, **kwargs) }}
         {% if field.errors %}
             {% for e in field.errors %}
-                <p class="help-block">{{ e }}</p>
+                <span class="help-block">{{ e }}</span>
             {% endfor %}
         {% endif %}
     </div>
