--- a/microblog/app/templates/index.html
+++ b/microblog/app/templates/index.html
@@ -2,14 +2,14 @@
 {% block content %}
     {% if g.user.is_authenticated %}
         <div class="welcome-logged">
-            <h1>Hi, {{ user.nickname }}!</h1>
+            <h1>Hi, {{ user.username }}!</h1>
             {% for post in posts %}
                 <div>
                     <p>
                         On {{ post.date }}:
                     </p>
                     <p>
-                        {{ post.author.nickname }} said: <b>{{ post.body }}</b>
+                        {{ post.author.username }} said: <b>{{ post.body }}</b>
                     </p>
                 </div>
             {% endfor %}
