--- a/microblog/app/templates/post.html
+++ b/microblog/app/templates/post.html
@@ -1,3 +1,13 @@
+<style>
+    .post .post-body {
+        overflow: hidden;
+    }
+
+    .post img {
+        margin-right: 10px;
+        float: left;
+    }
+</style>
 <div class="post {{ post.id }}">
     <img src="{{ user.avatar(48) }}">
     <div class="post-body">
