--- a/microblog/app/templates/user/user.html
+++ b/microblog/app/templates/user/user.html
@@ -66,10 +66,12 @@
     </div>
     <hr>
     <div id="post-list">
-        {% for post in posts %}
+        {% for post in posts.items %}
             {% with user=post.author %}
                 {% include 'post.html' %}
             {% endwith %}
         {% endfor %}
+        {% if posts.has_prev %}<a href="{{ url_for('user_profile', username=user.username, page=posts.prev_num) }}">&lt;&lt; Newer posts</a>{% else %}&lt;&lt; Newer posts{% endif %} |
+        {% if posts.has_next %}<a href="{{ url_for('user_profile', username=user.username, page=posts.next_num) }}">Older posts &gt;&gt;</a>{% else %}Older posts &gt;&gt;{% endif %}
     </div>
 {% endblock %}
