--- a/microblog/app/templates/register.html
+++ b/microblog/app/templates/register.html
@@ -9,6 +9,6 @@
         {{ macros.render_field(form.password, "password_field automation_password_field")}}
         {{ macros.render_field(form.repeated_password, "repeated_password_field automation_repeated_password_field")}}
         {{ macros.render_field(form.email, "email_field automation_email_field")}}
-        <input type="submit" value="Register">
+        <input class="btn btn-success" type="submit" value="Register">
     </form>
 {% endblock %}
