--- a/microblog/app/templates/base.html
+++ b/microblog/app/templates/base.html
@@ -5,17 +5,24 @@
     {% else %}
         <title>Welcome to people messages</title>
     {% endif %}
+    <link href="/static/css/bootstrap.css" rel="stylesheet"/>
+    <link href="/static/css/miniblog.css" rel="stylesheet"/>
+    <script src="/static/js/jquery.js"></script>
+    <script src="/static/js/bootstrap.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 {% import 'macros.html' as macros %}
 {% include "header.html" %}
 {% with messages = get_flashed_messages() %}
     {% if messages %}
-        <ul>
-            {% for message in messages %}
-                <li>{{ message }} </li>
-            {% endfor %}
-        </ul>
+        {% for message in messages %}
+            <div class="alert alert-warning alert-dismissible fade in" role="alert">
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span
+                        aria-hidden="true">×</span></button>
+                {{ message }}
+            </div>
+        {% endfor %}
     {% endif %}
 {% endwith %}
 {% block content %}{% endblock %}
