--- a/microblog/app/templates/header.html
+++ b/microblog/app/templates/header.html
@@ -1,14 +1,26 @@
-<div class="header">
-    <span>
+<div id="header">
+    <span class="name">
         Microblog:
     </span>
-    <a href="{{ url_for("index") }}">Home</a> |
-    {% if g.user.is_authenticated %}
-        <a href="{{ url_for("user_profile", username=g.user.username) }}">Your profile</a> |
-        <a href="{{ url_for("logout") }}">Logout</a>
-    {% endif %}
-    {% if not g.user.is_authenticated %}
-        <a href="{{ url_for("login") }}">Login</a> |
-        <a href="{{ url_for("register") }}">Register</a>
-    {% endif %}
+    <ul>
+        <li {% if active == "home" %}class="active"{% endif %}>
+            <a href="{{ url_for("index") }}">Home</a>
+        </li>
+        {% if g.user.is_authenticated %}
+            <li {% if active == "profile" %}class="active"{% endif %}>
+                <a href="{{ url_for("user_profile", username=g.user.username) }}">Your profile</a>
+            </li>
+            <li>
+                <a href="{{ url_for("logout") }}">Logout</a>
+            </li>
+        {% endif %}
+        {% if not g.user.is_authenticated %}
+            <li {% if active == "login" %}class="active"{% endif %}>
+                <a href="{{ url_for("login") }}">Login</a>
+            </li>
+            <li {% if active == "register" %}class="active"{% endif %}>
+                <a href="{{ url_for("register") }}">Register</a>
+            </li>
+        {% endif %}
+    </ul>
 </div>
