--- a/microblog/app/templates/post.html
+++ b/microblog/app/templates/post.html
@@ -1,6 +1,6 @@
 <div class="post {{ post.id }}">
-    <img src="{{ user.avatar(48) }}">
-    <div class="post-body">
+    <img class="img-circle" src="{{ user.avatar(48) }}">
+    <div class="post-body well well-sm">
         <div class="user">
             <span class="username">{{ post.author.username }}</span> says:
         </div>
