--- a/microblog/app/templates/user/user.html
+++ b/microblog/app/templates/user/user.html
@@ -23,11 +23,11 @@
     </div>
     <div>
         {% if user.id == g.user.id %}
-            <a href="/user/edit">Edit</a>
+            <a class="btn btn-success" href="/user/edit">Edit</a>
         {% elif not g.user.is_following(user) %}
-            <a href="{{ url_for('follow', username=user.username) }}">Follow</a>
+            <a class="btn btn-info" href="{{ url_for('follow', username=user.username) }}">Follow</a>
         {% else %}
-            <a href="{{ url_for('unfollow', username=user.username) }}">Unfollow</a>
+            <a class="btn btn-danger" href="{{ url_for('unfollow', username=user.username) }}">Unfollow</a>
         {% endif %}
     </div>
     <hr>
