adding moment.js to the party

--- a/microblog/app/templates/base.html
+++ b/microblog/app/templates/base.html
@@ -9,6 +9,7 @@
     <link href="/static/css/microblog.css" rel="stylesheet"/>
     <script src="/static/js/jquery.js"></script>
     <script src="/static/js/bootstrap.js"></script>
+    <script src="/static/js/moment.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
